adding consumer